# Parallel_Game_Programming

ImageProcessing/CudaRuntime1/: CudaRuntime1.sln
ImageProcessing/CudaRuntime1/CudaRuntime1/: ColourToBlackWhite.cu  CudaRuntime1.vcxproj  HostBlackWhite.cpp  HostBlured.cpp  MatrixAddition.cu  kernel.cu
ImageProcessing/NsightComput/: BL3ch16x16y.ncu-rep  BW3ch16x16y.ncu-rep  BW3ch16x16y8k.ncu-rep  BW3ch256x1y.ncu-rep  BW3ch256x1y12rgb.ncu-rep  BW3ch256x1y12rgbCache.ncu-rep  BW3ch256x1y12rgbColStore.ncu-rep  BW3ch256x1y16rgb.ncu-rep  BW3ch256x1y8k.ncu-rep  BW3ch256x1y8k12rgb.ncu-rep  BW3ch256x1y8k12rgbCache.ncu-rep  BW3ch256x1y8kCache.ncu-rep  BW3ch32x8y.ncu-rep  BW3ch32x8y8k.ncu-rep  BW4ch16x16y.ncu-rep  BW4ch256x1y.ncu-rep  BW4ch256x1y8k.ncu-rep  BW4ch32x8y.ncu-rep  BW4ch32x8yBAD.ncu-rep  CudaRuntime1.ncu-proj
PlatformLayer/: CMakeLists.txt
PlatformLayer/src/: Audio.cpp  COM.cpp  Engine.rc  FileSystem.cpp  Input.cpp  Renderer.cpp  Textures.cpp  Utils.cpp  Window.cpp  WindowsEngine.cpp
PlatformLayer/src/Dependencies/D3D12/include/: d3dx12.h
PlatformLayer/src/shaders/: GenerateMips_CS.hlsl  PixelShader.hlsl  VertexShader.hlsl
